--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 				<p class="errorForm">Не верный логин или пароль</p>
 			</form>
 		</div>
+		<p>hello</p>
 		<script src="/script.js"></script>
 	</body>
 </html>
